--- a/src/main/webapp/css/GenericClanFrameStyling.css
+++ b/src/main/webapp/css/GenericClanFrameStyling.css
@@ -1,64 +1,119 @@
+*{
+	/*border: 1px Solid #808080;*/
+}
 
-.container {
-	margin-right: auto;
-    margin-left: auto;
-    padding: 0.2em;
-    width:48em;
-    height: 24em;
-	border: 2.5px Solid #808080;
-	/*overflow:hidden;*/
+div.container {
+	position: relative;
+	width:50em; 
+	height:25em;
 	word-wrap:break-word;
 }
 
-.columnOne {
-    display: block;
-	float: left;
-    margin: 0.2em;
+div.row{
+	position: absolute;
+	display: block;
+}
+
+.clear { clear:both; }
+
+div#RowOne{
+	top:0;
+	width: 99%;
+	height: 84%;
+	/*background-color: #666666;*/
+}
+div#RowTwo{
+	bottom:0;
+	width: 99%;
+	height: 16%;
+	/*background-color: #666699;*/
+}
+
+div.column{
+	position: absolute;
     padding: 0.2em;
 }
 
-
-#ClanLogo{
-	display: block;
-	width: 5em;
-	height: 5em;
-	margin: 1em;
-	padding-left:2.25em;
-
+div#RowOneColumnOne{
+	display:inline-box;
+	left: 0px;
+	width: 10%;
+	height:99%;
+	/*background-color: #666622;*/
 }
 
-#AW_frameHolder{
-	overflow: hidden;
-	display: block;
-	height: 13em;
-	width: 12.25em;
-	/*border: 2.5px Solid #808080;*/
+div#RowOneColumnTwo{
+	right: 0px;
+	text-align: center;
+	width: 88%;
+	height:99%;
+	/*background-color: #666699;*/
 }
 
-.columnTwo {
-	display: inline-block;
-    margin: 0.2em;
-    padding: 0.2em;
-	width: 33.25em;
-	height: 23em;
+div#frameHolder{
+	position: absolute; 
+	top: 0px; 
+	right: 0px;
+	width: 100%;
+	height: 89%;
 }
 
 #Selection_frameHolder{
-	display: inline-block;
-	margin: 0.2em;
-    padding: 0.2em;
-	width: 32.5em;
-	height: 20em;
+	width: 99%;
+	height: 99%;
+	border: 0;
+	overflow: auto;
 }
 
-#buttonControl {
-	width:32em;
-	height: 2em;
-    display: inline-block;
-	text-align: center;
-    margin-top: 0.2em;
+img#ClanLogo{
+	position: absolute;
+	display:block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 0.2em;
+	top:1.5em;
+	width: 4.5em;
+	height: 4.5em;
+	/*border: 2.5px Solid #808080;*/
+}
+
+img#UserLogo{
+	position: absolute;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 4.5em;
+	height: 4.5em;
+	bottom: 2.5em;
+	/*border: 2.5px Solid #808080;*/
+}
+
+div#RowTwoColumnOne{
+	margin-top:0.2em;
+	width: 99%;
+	height:99%;
+	background-color: lightgrey;
+}
+
+div#buttonControl {
+	position: absolute;
+	bottom:0px;
+	width:99%;
+	height: 10%;
+    text-align:center;
+}
+form#infoNavForm{
+	display:inline-block;
+	text-align:center;
+}
+div#buttonPrev{
+	display:inline-block;
+}
+
+div#buttonNext{
+	display:inline-block;
+}
+div#buttonSubmit{
+	display:inline-block;
+	margin-right: 0.2em;
 }
 
