--- a/src/main/webapp/css/chat/chat.css
+++ b/src/main/webapp/css/chat/chat.css
@@ -67,12 +67,11 @@ div.row{
 }
 
 div.column{
-	position: reltaive;
+	position: absolute;
 	padding: 0.2em;
 }
 
 div#columnOne {
-	position: absolute;
 	left:0px;
 	width: 58%;
 	height: 76%;
@@ -80,7 +79,6 @@ div#columnOne {
 }
 
 div#columnTwo {
-	position: absolute;
 	right:0px;
 	width: 38%;
 	height: 76%;
@@ -88,25 +86,11 @@ div#columnTwo {
 }
 
 div#sendText{
-	position:absolute;
 	bottom:0px;
 	left:0px;
-	width:60%;
-	height:14%;
-	padding: 0.2em;
-	/*border: 2.5px Solid #808080;*/
-	}
-	
-div#submitButton{
-	position:absolute;
-	bottom:0px;
-	right:0px;
-	float: right;
-	width:36%;
-	height:14%;
-	padding: 0.2em;
-	text-align:center;
-	vertical-align: middle;
+	width:58%;
+	height:16%;
+	vertical-align:middle;
 	/*border: 2.5px Solid #808080;*/
 	}
 	
@@ -115,17 +99,18 @@ div#sendText  Input[type="text"]{
 	font-size:1em;
 	display: inline-block;
 	float: left;
-	width: 98%;
+	width: 80%;
 	height:80%;
 }
 
-div#submitButton  Input[type="submit"]{
+input#sendMessageBtn{
 	font-size:1em;
+	padding: 0.2em;
 	display: inline-block;
 	float: right;
-	width: 98%;
-	height:84%;
-	margin-left: 0.5em;
+	width: 18%;
+	height:90%;
+	background: skyblue;
 }
 
 div#headerHolder{
@@ -174,7 +159,7 @@ div#roomSelection label{
 	display:inline-block;
 	float: left;
 	width: 85%;
-	height: 45%;
+	height: 50%;
 	margin: 0.2em;
 	text-align: left;
 	}
@@ -189,6 +174,8 @@ div#chatters{
 	padding: 0.2em;
 	width: 98%;
 	background: white;
+	max-height:45%;
+    overflow-y:scroll;
 }
 
 div#columnOne form{
@@ -217,3 +204,23 @@ div#columnTwo form{
 	/*border: 2.5px Solid #808080;*/
 	
 }
+
+div#emoji-picker {
+	bottom:0px;
+	right:0px;
+	float: right;
+	width:38%;
+	height:16%;
+	vertical-align: middle;
+	/*border: 2.5px Solid #808080;*/
+   }
+   
+img.emoji{
+   display: inline-block;
+   width: 1.5em;
+   height: 1.5em;
+   }
+   
+   img.emoji:hover {
+   background: lightblue;
+   }
