--- a/src/main/webapp/css/AwarenessWidgetStyling.css
+++ b/src/main/webapp/css/AwarenessWidgetStyling.css
@@ -1,120 +1,101 @@
 *{
 	/*border: 1px Solid #808080;*/
 }
-div.container {
-	position: relative;
-	width:50em; 
-	height:25em;
-	margin-right: auto;
-    margin-left: auto;
-	word-wrap:break-word;
-	/*background-color: #666699;*/
-}
+
 
 .clear { clear:both; }
 
-div.row{
+div.container {
 	position: absolute;
-	padding: 0.2em;
-}
-div#RowOne{
-	display:block;
-	top:0;
-	width: 99%;
-	height: 20%;
-	/*background-color: #666666;*/
-}
-div#RowTwo{
-	display:block;
-	bottom:0;
-	width: 99%;
-	height: 76%;
+	display: block;
+	width:100%; 
+	height:31em;
 	/*background-color: #666699;*/
 }
-div.column {
-	position: absolute;
-    padding: 0.2em;
-}
+
+
 div#RowOneColumnOne{
-	left: 0px;
-	width: 50%;
-	height:18%;
-	padding: 0.2em;
+	display:inline-block;
+	float:left;
+	width: 48%;
+	height:6em;
 }
 div#RowOneColumnTwo{
-	right: 0px;
-	width: 45%;
-	height:18%;
-	padding: 0.2em;
+	display:inline-block;
+	float:right;
+	width: 48%;
+	height:6em;
+}
+
+div#RowTwoColumnOne{
+	display:inline-block;
+	float:left;
+	bottom:0px;
+	width:48%;
+	height:25em;
+	/*background-color: #666688;*/
+}
+
+div#RowTwoColumnTwo{
+	display:inline-block;
+	right:5px;
+	bottom:5px;
+	width:48%;
+	height:25em;
 }
 
 img.imgHolder {
-	position:relative;
-	display: inline;
-	float: left;
+	float:left;
 	width: 2.5em;
 	height: 2.5em;
 	padding-right: 0.2em;
 	/*border: 1px Solid #808080;*/
 }
 div.headerText{ 
-	position:relative;
-	display: inline;
-	float:left;
 	font-size: 1.5em;
-	vertical-align: middle;
 	/*border: 1px Solid #808080;*/
 }
 
-div#RowTwoColumnOne{
-	display:inline;
-	left:0px;
-	width:50%;
-	height:96%;
-	padding: 0.2em;
-	/*background-color: #666688;*/
-}
+
+
 div#RowTwoColumnOne fieldset{
-	position: relative;
-	width:96%;
-	height: 96%;
-}
-iframe#AW_frameHolder{
-	display: block;
+	width:90%;
+	height:24em;
 }
 
-div#RowTwoColumnTwo{
-	right:0px;
-	width:45%;
-	height:96%;
-	padding: 0.2em;
+iframe#AW_frameHolder{
+	border:0;
+	width:99%;
+	height:23em;
+	/*background:azure;*/
 }
+
 
 div#AW_OtherClanOnline{
-	position: relative;
 	display: block;
-	width: 98%;
-	height: 5%;
+	width: 92%;
+	height: 2em;
 	margin-bottom: 0.5em;
 }
 
 div#AW_OtherClanOffline{
-	position: relative;
 	display: block;
-	width: 98%;
-	height: 5%;
+	width: 92%;
+	height: 2em;
 	margin-bottom: 0.5em;
 }
+
+
+
 div#RowTwoColumnTwo strong{
 	display: block;
-	width: 98%;
+	width: 46%;
 	font-size: 1em;
 }
 
 div#RowTwoColumnTwo fieldset{
-	position: absolute;
-	width:96%;
-	bottom:5px;
+	width:90%;
+	height: 10em;
 }
 
 div#RowTwoColumnTwo svg {
