--- a/src/main/webapp/css/chat/chat.css
+++ b/src/main/webapp/css/chat/chat.css
@@ -86,30 +86,29 @@ div#columnTwo {
 }
 
 div#sendText{
+	display:inline-table;
 	bottom:0px;
 	left:0px;
 	width:58%;
 	height:16%;
-	vertical-align:middle;
 	/*border: 2.5px Solid #808080;*/
 	}
 	
 	
-div#sendText  Input[type="text"]{
+input#messagebox{
 	font-size:1em;
 	display: inline-block;
 	float: left;
-	width: 80%;
+	width: 78%;
 	height:80%;
 }
 
 input#sendMessageBtn{
 	font-size:1em;
-	padding: 0.2em;
 	display: inline-block;
 	float: right;
 	width: 18%;
-	height:90%;
+	height:84%;
 	background: skyblue;
 }
 
