--- a/src/main/webapp/css/GenericClanFrameStyling.css
+++ b/src/main/webapp/css/GenericClanFrameStyling.css
@@ -17,7 +17,7 @@ div#RowOneColumnOne{
 	display:inline-block;
 	float:left;
 	width: 10%;
-	height:25em;
+	height:27em;
 	text-align:center;
 	/*background-color: #666622;*/
 }
@@ -27,7 +27,7 @@ div#RowOneColumnTwo{
 	float:right;
 	right: 0px;
 	width: 86%;
-	height:25em;
+	height:27em;
 	/*background-color: #666699;*/
 }
 
@@ -35,8 +35,7 @@ div#RowTwoColumnOne{
 	display:inline-block;
 	float:left;
 	margin-top:0.2em;
-	width: 99%;
-	height:4.5em;
+	width: 100%;
 	background-color: lightblue;
 }
 
@@ -94,4 +93,10 @@ div#buttonNext{
 div#buttonSubmit{
 	display:inline-block;
 	margin-right: 0.2em;
+}
+
+div#AW_frameHolder{
+	width:100%;
+	max-height:2.5em;
+	overflow-y: scroll;
 }
